Nested navigation items changed to display in initial state.

--- a/material/partials/nav-item.html
+++ b/material/partials/nav-item.html
@@ -7,7 +7,7 @@
 {% endif %}
 {% if nav_item.children %}
   <li class="{{ class }} md-nav__item--nested">
-    {% if nav_item.active %}
+    {% if nav_item.active or level > 1 %}
       <input class="md-nav__toggle md-toggle" data-md-toggle="{{ path }}" type="checkbox" id="{{ path }}" checked>
     {% else %}
       <input class="md-nav__toggle md-toggle" data-md-toggle="{{ path }}" type="checkbox" id="{{ path }}">
