--- a/src/partials/nav-item.html
+++ b/src/partials/nav-item.html
@@ -114,7 +114,7 @@
   </li>
 
 <!-- Main navigation item -->
-{% else %}
+{% elif not nav_item.title.startswith("_") %}
   <li class="{{ class }}">
     <a href="{{ nav_item.url | url }}" class="md-nav__link">
       {{ nav_item.title }}
